# FastAPI

./: .env-example  Makefile  docker-compose.yaml
.github/workflows/: linters.yaml
backend_api/: Dockerfile  pyproject.toml
backend_api/app/: app_factory.py  main.py  settings.py
backend_api/app/applications/: password_handler.py
backend_api/app/applications/auth/: auth_handler.py  router.py  security.py
backend_api/app/applications/database/: base_models.py
backend_api/app/applications/products/: crud.py  models.py  router.py  schemas.py
backend_api/app/applications/users/: crud.py  models.py  router.py  schemas.py
backend_api/app/database/: sessions_dependencies.py
backend_api/app/migrations/: env.py
backend_api/app/migrations/versions/: 2025_05_02_1848-922e81026181_add_users_table.py  2025_06_06_1630-6007eea655d5_add_user_verification_and_admin_fields.py  2025_06_06_1652-4a94205ff4cd_add_user_verification_and_admin_fields.py  2025_06_17_1841-47391407dc8b_products.py  2025_07_01_1652-aa6b254e2b08_cart.py
backend_api/app/services/rabbit/: constants.py  rabbitmq_service.py
backend_api/app/services/s3/: s3.py
backend_api/app/users/: router.py
documentation/docs/: tasks.md
frontend/: pyproject.toml
frontend/app/: settings.py
frontend/app/backend_api/: api.py
frontend/app/routers/: main_page_router.py
frontend/app/templates/: index.html  login.html  product_detail.html
frontend/app/templates/components/: base.html  login_comp.html  navbar.html  (+1 more)
notification_service/: pyproject.toml
notification_service/app/: main.py  settings.py
(+2 files in other folders)
